// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for long url with http protocol with www 1`] = `
<span class="website-url">
  <a href="http://www.openstreetmap.hu"
     target="_blank"
     title="openstreetmap.hu"
  >
    <span class="hidden-part">
      http://www.
    </span>
    openstreet
    <span class="hidden-part">
      map.hu
    </span>
    <span class="hidden-indicator">
    </span>
  </a>
</span>
`;

exports[`renders correctly for long url with http protocol without www 1`] = `
<span class="website-url">
  <a href="http://openstreetmap.hu"
     target="_blank"
     title="openstreetmap.hu"
  >
    <span class="hidden-part">
      http://
    </span>
    openstreet
    <span class="hidden-part">
      map.hu
    </span>
    <span class="hidden-indicator">
    </span>
  </a>
</span>
`;

exports[`renders correctly for long url with https protocol with www 1`] = `
<span class="website-url">
  <a href="https://www.openstreetmap.hu"
     target="_blank"
     title="openstreetmap.hu"
  >
    <span class="hidden-part">
      https://www.
    </span>
    openstreet
    <span class="hidden-part">
      map.hu
    </span>
    <span class="hidden-indicator">
    </span>
  </a>
</span>
`;

exports[`renders correctly for long url with https protocol without www 1`] = `
<span class="website-url">
  <a href="https://openstreetmap.hu"
     target="_blank"
     title="openstreetmap.hu"
  >
    <span class="hidden-part">
      https://
    </span>
    openstreet
    <span class="hidden-part">
      map.hu
    </span>
    <span class="hidden-indicator">
    </span>
  </a>
</span>
`;

exports[`renders correctly for long url with https protocol without www ending with / 1`] = `
<span class="website-url">
  <a href="https://openstreetmap.hu/"
     target="_blank"
     title="openstreetmap.hu"
  >
    <span class="hidden-part">
      https://
    </span>
    openstreet
    <span class="hidden-part">
      map.hu/
    </span>
    <span class="hidden-indicator">
    </span>
  </a>
</span>
`;

exports[`renders correctly for long url without protocol 1`] = `
<span class="website-url">
  <a href="http://openstreetmap.hu"
     target="_blank"
     title="openstreetmap.hu"
  >
    openstreet
    <span class="hidden-part">
      map.hu
    </span>
    <span class="hidden-indicator">
    </span>
  </a>
</span>
`;

exports[`renders correctly for long url without protocol ending with / 1`] = `
<span class="website-url">
  <a href="http://openstreetmap.hu/"
     target="_blank"
     title="openstreetmap.hu"
  >
    openstreet
    <span class="hidden-part">
      map.hu/
    </span>
    <span class="hidden-indicator">
    </span>
  </a>
</span>
`;

exports[`renders correctly for short url with http protocol with www 1`] = `
<span class="website-url">
  <a href="http://www.openstreetmap.hu"
     target="_blank"
     title
  >
    <span class="hidden-part">
      http://www.
    </span>
    openstreetmap.hu
  </a>
</span>
`;

exports[`renders correctly for short url with http protocol without www 1`] = `
<span class="website-url">
  <a href="http://openstreetmap.hu"
     target="_blank"
     title
  >
    <span class="hidden-part">
      http://
    </span>
    openstreetmap.hu
  </a>
</span>
`;

exports[`renders correctly for short url with https protocol with www 1`] = `
<span class="website-url">
  <a href="https://www.openstreetmap.hu"
     target="_blank"
     title
  >
    <span class="hidden-part">
      https://www.
    </span>
    openstreetmap.hu
  </a>
</span>
`;

exports[`renders correctly for short url with https protocol with www ending with / 1`] = `
<span class="website-url">
  <a href="https://www.openstreetmap.hu/"
     target="_blank"
     title
  >
    <span class="hidden-part">
      https://www.
    </span>
    openstreetmap.hu
  </a>
</span>
`;

exports[`renders correctly for short url with https protocol without www 1`] = `
<span class="website-url">
  <a href="http://openstreetmap.hu"
     target="_blank"
     title
  >
    <span class="hidden-part">
      http://
    </span>
    openstreetmap.hu
  </a>
</span>
`;

exports[`renders correctly for short url without protocol 1`] = `
<span class="website-url">
  <a href="http://openstreetmap.hu"
     target="_blank"
     title
  >
    openstreetmap.hu
  </a>
</span>
`;
